...
    }

    public render() {
        return (
            <View
                style={styles.container}
                testID='welcome'
            >
                <ProfileIcon profileImage={this.props.profileImage} gatewayAddress={this.props.gatewayAddress}/>
                <TouchableView
                    onPress={() =>
                        this.props.navigation.navigate('Post', {})
                    }
                    style={styles.headerTextContainer}
                    hitSlop={{
                        ...TouchableViewDefaultHitSlop,
                        left: 0,
                    }}
                    testID='FeedHeader/TouchableHeaderText'
                >
                    <RegularText style={styles.headerText}>What's up?</RegularText>
                </TouchableView>
                <TouchableView
                    onPress={this.launchCamera}
                    style={styles.cameraIconContainer}
...
