...
                        />
                    </View>
                ),
                tabBarOnPress: ({ navigation }: { navigation: TypedNavigation }) => {
                    navigation.navigate('Post', {});
                },
                tabBarTestID: 'TabBarPostButton',
            },
        },
        ProfileTab: {
            screen: ProfileNavigator,
            navigationOptions: {
                tabBarIcon: ({ tintColor, focused }: { tintColor?: string, focused: boolean }) => (
...
            header: null,
        },
    },
);

const OnboardingNavigator = createStackNavigator({
    Welcome: {
        screen: WelcomeContainer,
    },
    ProfileOnboarding: {
        screen: ProfileContainer,
    },
}, {
...
